<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/acube2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/msg_sit_back"
            android:textColor="@color/colorGray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/msg_manual_otp"
            android:textColor="@color/colorGray"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputOtpEdt"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_curved"
            android:gravity="center_horizontal"
            android:hint="@string/lbl_enter_otp"
            android:inputType="number"
            android:maxLength="6"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_green_curved"
            android:text="@string/hint_submit"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal|right"
            android:text="@string/otp_resend"
            android:textColor="@color/colorGray"
            android:textSize="14sp"
            android:visibility="gone"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>