<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/totalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login_screen"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/dashboard_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical|center"
            android:text="@string/hint_change_password"
            android:textColor="#DCDCDC"
            android:textSize="16sp" />

        <!--<com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/view3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:mtf_image="@mipmap/ic_lock_outline">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2a2a2a"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="#333"
                android:textColorHighlight="#000000"
                android:textColorHint="#666"
                android:textSize="14sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>-->


        <com.jaimovie.view.CleanableEditText
            android:id="@+id/edt_currPassword"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edittext_curved"
            android:hint="@string/hint_current"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="15sp" />

        <com.jaimovie.view.CleanableEditText
            android:id="@+id/edt_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edittext_curved"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="15sp" />

        <com.jaimovie.view.CleanableEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edittext_curved"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="94dp"
            android:text="@string/hint_submit"
            android:background="@drawable/bg_green_curved"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>