<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/totalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="0dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:src="@drawable/acube2" />

    <TextView
        android:id="@+id/createLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:text="@string/hint_create"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_register"
        android:layout_below="@id/createLabel"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameEdt"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_curved"
                android:drawablePadding="8dp"
                android:gravity="center|left"
                android:hint="@string/hint_firstName"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/color_dark_gray"
                android:textColorHint="@color/color_hint_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lastNameEdt"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_curved"
                android:drawablePadding="8dp"
                android:gravity="center|left"
                android:hint="@string/hint_lastName"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/color_dark_gray"
                android:textColorHint="@color/color_hint_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_curved"
                android:drawablePadding="8dp"
                android:gravity="center|left"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="120"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/color_dark_gray"
                android:textColorHint="@color/color_hint_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobileEdt"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_curved"
                android:digits="0123456789"
                android:drawablePadding="8dp"
                android:gravity="center|left"
                android:hint="@string/hint_mobile"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="12dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/addressEdt"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_curved"
                android:drawablePadding="8dp"
                android:gravity="center|left|top"
                android:hint="@string/hint_address_str"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:maxLines="5"
                android:padding="12dp"
                android:textColor="@color/color_dark_gray"
                android:textColorHint="@color/color_hint_text"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/passwordEdt"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_curved"
                android:drawablePadding="8dp"
                android:gravity="center|left"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="12dp"
                android:textSize="16sp" />

        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/hint_register"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

</RelativeLayout>
