<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/totalLoginLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/acube2" />

        <TextView
            android:id="@+id/createLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/hint_signin"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_curved"
            android:drawablePadding="8dp"
            android:gravity="center|left"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:maxLength="120"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/color_dark_gray"
            android:textColorHint="@color/color_hint_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittext_curved"
            android:drawablePadding="8dp"
            android:gravity="center|left"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/color_dark_gray"
            android:textColorHint="@color/color_hint_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_green_curved"
            android:text="@string/hint_signin"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgotPassTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_forgot"
                android:textColor="@color/colorGray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/hint_register"
                android:textColor="@color/colorGray"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/orTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/colorGray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fbIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_green_circle"
                android:padding="5dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/googleIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/shape_green_circle"
                android:padding="5dp"
                android:src="@drawable/ic_google_plus" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>