<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioLYT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titledialogTXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#FFF" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="0dp"
            android:padding="10dp"
            android:src="@drawable/ic_close_circle_outline_white_36dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/msgTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center|left"
        android:text="@string/hint_logout"
        android:textAllCaps="false"
        android:textColor="@color/colorGray"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog"
            android:gravity="center"
            android:text="@string/hint_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog"
            android:gravity="center"
            android:text="Confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>